--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/mime": "^1.3.2",
     "@types/mime-types": "^2.1.1",
@@ -49,6 +50,7 @@
     "class-validator": "^0.13.2",
     "convict": "^6.2.3",
     "convict-format-with-validator": "^6.2.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.5",
     "docenv": "^2.0.6",
     "express": "^4.18.1",
